--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,3 +70,68 @@
   author={Einstein, A.},
   year={1905}
 }
+
+@inproceedings{inproceedings,
+  abbr={IEEE ICC 2021},
+  author = {Shukla, Arpit and Ramdasani, Urvashi and Vinzuda, Gunjan and Tanwar, Sudeep and Obaidat, Mohammad and Kumar, Neeraj},
+  year = {2021},
+  month = {06},
+  pages = {},
+  title = {BCovX: Blockchain-based COVID Diagnosis Scheme using Chest X-Ray for Isolated Location},
+  doi = {10.1109/ICC42927.2021.9500499},
+  html={https://ieeexplore.ieee.org/document/9500499},
+  pdf={BCovX_Blockchain-based_COVID_Diagnosis_Scheme_using_Chest_X-Ray_for_Isolated_Location.pdf},
+  selected={true},
+  bibtex_show={true},
+  abstract={The COVID-19 pandemic has adversely affected
+  the lives of millions of people worldwide. With an alarming
+  increase in COVID-19 cases, it is important to detect and diagnose
+  COVID-19 in its early stages to prevent its spread. To diagnose
+  remote patients, the Internet can be useful for accessing data of
+  that patient. But, the Internet has also had issues related to data
+  security, reliability, and privacy. Motivated by these challenges,
+  in this paper, we propose a Blockchain (BC) based COVID-
+  19 detection scheme (BCovX) for fast and reliable diagnosis
+  of COVID-19 using chest X-Ray (CXR) images. For fast and
+  accurate detection of COVID-19 using CXR, BCovX consists of
+  a Convolutional Neural Network (CNN) model, using which a
+  patient can be diagnosed for COVID-19 remotely. CNNs have
+  performed successfully in medical imaging classification. BCovX
+  provides reliable and secure data access and exchange using BC
+  and smart contracts (SC). To solve issues related to data storage
+  and its associated cost, the InterPlanetary File System (IPFS)
+  protocol is used to store medical data. We also present a real-time
+  SC developed in Solidity to govern the transaction between the
+  patient and the doctor. The SC has been compiled and deployed
+  on Remix Integrated Development Environment (IDE). Finally,
+  we have evaluated the performance of BCovX with traditional
+  schemes in terms of storage cost, bandwidth requirements, and
+  accuracy of the CNN model.}
+}
+
+@article{article,
+  abbr={ACECAT 2021},
+  author = {Ramdasani, Urvashi},
+  year = {2021},
+  month = {04},
+  pages = {},
+  title = {A Review of Kernel Methods in Machine Learning},
+  pdf={A_Review_of_Kernel_Methods_in_Machine_Learning.pdf},
+  html={https://www.researchgate.net/publication/350966171_A_Review_of_Kernel_Methods_in_Machine_Learning},
+  selected={true},
+  bibtex_show={true},
+  abstract={Machine Learning (ML) is an efficient technology
+  for pattern recognition and analysis. Pattern recognition involves
+  recognizing patterns from strings, images, etc. Pattern analysis
+  and recognition have found great applications in the areas of
+  Natural Language Processing, Optical Character Recognition,
+  Computer Vision, Autonomous Path Navigation and Speech
+  Recognition. Kernel methods are a category of ML algorithms
+  extensively used for pattern analysis. These methods use one or
+  more kernel functions for analysis. These methods are used in
+  specific applications. A variety of kernel functions and methods
+  available which have found great use in the areas of medicine,
+  information processing, image processing, etc. In this paper,
+  a review of kernel functions and methods along with their
+  applications has been presented.}
+}
