Added new experience and publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -135,3 +135,17 @@
   a review of kernel functions and methods along with their
   applications has been presented.}
 }
+
+@article{dubloq,
+  abbr={IWCMC 2022},
+  author={Ramdasani, Urvashi and Vinzuda, Gunjan and Tanwar, Sudeep and Gupta, Rajesh and Guizani, Mohsen},
+  year={2022},
+  month={07},
+  pages={284-289},
+  title={DuBloQ: Blockchain and Q-Learning Based Drug Discovery in Healthcare 4.0},
+  html={https://ieeexplore.ieee.org/document/9824216},
+  selected={true},
+  bibtex_show={true},
+  doi={10.1109/IWCMC55113.2022.9824216},
+  abstract={Drug Discovery is a process by which new potential drugs are discovered and clinically trialed for commercial medicinal purposes. It has several stages of development, where each stage requires a prescribed time for its completion. The stages of drug development are discovery and development, pre-clinical research, clinical development, Food and Drug Administration (FDA) review, and post-market monitoring. The first three stages themselves take nearly 6.5 years. These stages take a huge time in cases where there is an urgent need for a drug. For example, during the COVID-19 pandemic, there was an urgent need for a vaccine. Many research institutes worked 24×7 to develop a vaccine, but it still took a considerable time to get to a bare minimum vaccine. To tackle this problem, we propose DuBloQ, a novel methodology for drug discovery using Q-Learning. Our Q-Learning model consists of a generator and a predictor model. The generator generates a set of Simplified Molecular Input Line Entry System (SMILES) strings and the Predictor predicts its logp values. Based on the logp values, the reward for the generator is provided to improve its performance. We integrate this model with a blockchain User Interface (UI) that ensures security and privacy. We achieved an accuracy of 76.1% for the generator model.}
+}
